fix: scrollbar size from 10px to 5px

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -83,7 +83,6 @@ main {
 .headerLink {
   text-decoration: none;
   color: var(--linkColor);
-  transition: color 0.5s ease-in-out;
 }
 
 .headerLink:hover {
